--- a/services/identity/Dockerfile
+++ b/services/identity/Dockerfile
@@ -1,8 +1,12 @@
 FROM node:18-alpine
-RUN apk add --no-cache curl  # For debugging
 WORKDIR /usr/src/app
-COPY package.json ./
-RUN npm install
-COPY . .
-EXPOSE 4000
+COPY package*.json ./
+RUN npm install --production
+COPY index.js .
+EXPOSE 0
+ENV NODE_ENV=production \
+    CONSUL_HOST=consul \
+    CONSUL_PORT=8500 \
+    KEYCLOAK_HOST_URL=http://host.docker.internal:8080 \
+    HOSTNAME=identity-service
 CMD ["npm", "start"]
