--- a/services/identity/enrollment/package.json
+++ b/services/identity/enrollment/package.json
@@ -1,22 +1,28 @@
 {
-    "name": "enrollment-service",
-    "version": "1.0.0",
-    "description": "Enrollment Service.",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js",
-      "dev": "nodemon index.js"
-    },
-    "author": "eGovernments Foundation",
-    "license": "MIT",
-    "dependencies": {
-      "express": "^4.17.1",
-      "node-fetch": "^2.6.7",
-      "jsonwebtoken": "^9.0.2",
-      "jwks-rsa": "^3.1.0",
-      "cors": "^2.8.5"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.2"
-    }
+  "name": "enrollment-service",
+  "version": "1.0.0",
+  "description": "Enrollment Service for Identity Management",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "eGovernment Foundation",
+  "license": "MIT",
+  "dependencies": {
+    
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
+    "node-fetch": "^2.7.0",
+    "uuid": "^9.0.1" 
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
+}
