--- a/services/registration/package.json
+++ b/services/registration/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "account-service",
+    "name": "registration-service",
     "version": "1.0.0",
+    "description": "GovStack Registration Building Block Service",
     "main": "index.js",
     "scripts": {
       "start": "node index.js",
@@ -8,13 +9,16 @@
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "eGovernment Foundation",
-    "description": "GovStack Account Building Block Service",
     "license": "MIT",
     "dependencies": {
+      
       "cors": "^2.8.5",
       "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.2",
+      "jwks-rsa": "^3.1.0",
       "node-fetch": "^2.7.0",
-      "pg": "^8.11.3"
+      "pg": "^8.11.3",
+      "uuid": "^9.0.1"
     },
     "devDependencies": {
       "nodemon": "^3.0.1"
