--- a/services/registry/database/package.json
+++ b/services/registry/database/package.json
@@ -1,18 +1,27 @@
 {
     "name": "database-service",
     "version": "1.0.0",
-    "description": "Data Management Service",
     "main": "index.js",
     "scripts": {
-    "start": "node index.js"
+      "start": "node index.js",
+      "dev": "nodemon index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "author": "eGovernment Foundation",
+    "description": "GovStack Database Service",
+    "license": "MIT",
     "dependencies": {
-        "express": "^4.17.1",
-        "pg": "^8.7.3",
-        "jsonwebtoken": "^9.0.2",
-        "jwks-rsa": "^3.1.0",
-        "cors": "^2.8.5"
+      
+      "cors": "^2.8.5",
+      "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.2",
+      "jwks-rsa": "^3.1.0",
+      "pg": "^8.11.3"
     },
-    "author": "eGovernments Foundation",
-    "license": "MIT"
+    "devDependencies": {
+      "nodemon": "^3.0.1"
+    },
+    "engines": {
+      "node": ">=14.0.0"
+    }
   }
